--- a/treemap/index.html
+++ b/treemap/index.html
@@ -19,6 +19,6 @@
 
 <body>
   <script src="js/cinemaTreemap.js"></script>
-  <div id="container"></div>
+  <div id="tmp1" class="tmap"></div>
 </body>
 </html>
